fixed the literals

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="main.js" defer></script>
 </head>
 <body>
-    <header class='header'></header>
+    <header class='header'>Droid for Sale</header>
     <main class='container'>
         <div class='name' id='name'></div>
         <div class='color' id='color'></div>
