styling done to look like the movie

--- a/index.html
+++ b/index.html
@@ -5,19 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Kreg's List</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <script src="main.js" defer></script>
 </head>
 <body>
     <header class='header'>Droid for Sale</header>
-    <main class='container'>
-        <div class='name' id='name'></div>
-        <div class='color' id='color'></div>
-        <div class='shippingWeight' id='shippingWeight'></div>
-        <div class='size' id='size'></div>
-        <div class='madeOn' id='madeOn'></div>
-        <div class='dateOfManufacture' id='dateOfManufacture'></div>
-        <div class='condition' id='condition'></div>
+    <main>
+        <div class='container1'>
+            <div class='div1'>
+                <div class='name' id='name'></div>
+                <div class='description'>Comes with a CG4XB Expanded Program Memory Core and Ulqib MicroTronics customization kit, including a datapad neural pathway linkage, a memory modulator, a memory wipe module, replacement actuators, replacement micro-servos, additional software node, broadband antenna receiver, movement sensor, repulsorlift motor, internal computer interface socket, two photoreceptors, two audio receptors, vocabulator panel, database retrieval system, and a remote programming receiver.</div>
+                <div class='condition' id='condition'>Used. Well cared for.</div>
+            </div>
+            <img class='img' src='R5-D4.png'>
+        </div>
+        <div class='container2'>
+            <div class='div2'>
+                <div class='color' id='color'></div>
+                <div class='shippingWeight' id='shippingWeight'></div>
+                <div class='size' id='size'></div>
+                <div class='dateOfManufacture' id='dateOfManufacture'></div>
+            </div>
+            <div class='price'>Price Negotiable!</div>
+        </div>
     </main>
-    <footer class='footer'></footer>
 </body>
 </html>
